# tubex-solve

./: .travis.yml  CMakeLists.txt  README.md  build.sh
problems/: CMakeLists.txt  resultats-cidslicing.ods
problems/01_picard/: CMakeLists.txt  main.cpp
problems/02_xmsin_fwd/: CMakeLists.txt  main.cpp
problems/03_xmsin_bwd/: CMakeLists.txt  main.cpp
problems/04_bvp/: CMakeLists.txt  main.cpp
problems/05_delay/: CMakeLists.txt  main.cpp
problems/06_bvp_delay/: CMakeLists.txt  main.cpp
problems/07_integro_diff/: CMakeLists.txt  main.cpp
problems/08_bvp_delay_2d/: CMakeLists.txt  main.cpp
problems/09_csdp/: CMakeLists.txt  main.cpp
problems/10_large_initvalue/: CMakeLists.txt  main.cpp
problems/11_circle/: CMakeLists.txt  main.cpp
problems/12_f-sqr2/: CMakeLists.txt  main.cpp
problems/13_linear/: CMakeLists.txt  main.cpp  resultats
problems/14_sincos/: CMakeLists.txt  main.cpp
problems/15_sinbvp/: CMakeLists.txt  main.cpp
problems/16_circlebvp/: CMakeLists.txt  main.cpp
problems/17_bvpsolveprob2/: CMakeLists.txt  main.cpp
problems/18_bvpsolveprob34/: CMakeLists.txt  main.cpp
problems/19_wrappingivp/: CMakeLists.txt  main.cpp
problems/20_wrapping_intervalivp/: CMakeLists.txt  main.cpp
problems/20_wrappingivp/: CMakeLists.txt  main.cpp
problems/21_alexwrapping/: CMakeLists.txt  main.cpp  resultats21
problems/22_integrodiff07_bvpmodel/: CMakeLists.txt  main.cpp  resultats
problems/23_bvpsolve22/: main.cpp
src/: CMakeLists.txt  tubex_Solver.cpp  tubex_Solver.h  tubex_Solver_bisectionguess.cpp
