# ==================================================================
#  tubex-solve - cmake configuration file
# ==================================================================

cmake_minimum_required (VERSION 3.0.2)

project (TUBEX_SOLVE VERSION 0.42 LANGUAGES CXX)
set (TUBEX_SOLVE_DESCRIPTION "Short description of the plugin")

################################################################################
# Options for install directory
################################################################################
set (CMAKE_INSTALL_INCLUDEDIR "include" CACHE PATH "C++ header files (include)")
set (CMAKE_INSTALL_LIBDIR "lib" CACHE PATH "object code libraries (lib)")
set (CMAKE_INSTALL_BINDIR "bin" CACHE PATH "user executables (bin)")

################################################################################
# Check that the compiler supports c++11
################################################################################
include(CheckCXXCompilerFlag)

CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
if(COMPILER_SUPPORTS_CXX11)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
else()
  message(FATAL_ERROR "tubex-solve needs a compiler with C++11 support")
endif()

if (WIN32)
  # We need this for strdup under Windows (see issue #287)
  add_definitions(-U__STRICT_ANSI__)
endif ()

################################################################################
# Removing warnings from GAOL
################################################################################

# With Gaol, we add "-Wno-deprecated" to remove lots of warnings generated by
# a function definition in gaol_interval.h
check_cxx_compiler_flag("-Wno-deprecated" COMPILER_SUPPORTS_WNO_DEPRECATED)
if(COMPILER_SUPPORTS_WNO_DEPRECATED)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated")
endif()

################################################################################
# Looking for Ibex, Tubex
################################################################################
#find_package (IBEX 2.8.3 REQUIRED)
include (FindPkgConfig)
pkg_search_module (IBEX REQUIRED ibex)
message (STATUS "Found Ibex version ${IBEX_VERSION}")
pkg_search_module (TUBEX REQUIRED tubex)
message (STATUS "Found Tubex version ${TUBEX_VERSION}")

################################################################################
# Compile sources
################################################################################
add_subdirectory (src)
add_subdirectory (problems)

################################################################################
# Tests
################################################################################
#include(CTest)
#if (BUILD_TESTING)
#  add_custom_target (check
#                      COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure $(ARGS)
#                      DEPENDS ibex-plugin COMMENT "Running the tests")
#  add_subdirectory (tests EXCLUDE_FROM_ALL)
#endif ()
