# ==================================================================
#  tubex-solve - cmake configuration file
# ==================================================================

add_subdirectory(01_picard)
add_subdirectory(02_xmsin_fwd)
add_subdirectory(03_xmsin_bwd)
add_subdirectory(04_bvp)
add_subdirectory(05_delay)
add_subdirectory(06_bvp_delay)
add_subdirectory(07_integro_diff)
add_subdirectory(08_bvp_delay_2d)
add_subdirectory(09_csdp)
add_subdirectory(10_large_initvalue)
add_subdirectory(11_circle)
add_subdirectory(12_f-sqr2)
add_subdirectory(13_linear)
add_subdirectory(14_sincos)
add_subdirectory(15_sinbvp)
add_subdirectory(16_circlebvp)
add_subdirectory(17_bvpsolveprob2)
add_subdirectory(18_bvpsolveprob34)
add_subdirectory(19_wrappingivp)
add_subdirectory(20_wrapping_intervalivp)
add_subdirectory(21_alexwrapping)
add_subdirectory(22_integrodiff07_bvpmodel)
