# ==================================================================
#  tubex-solve - Problems
# ==================================================================

add_executable (20_wrapping_intervalivp ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
target_link_libraries (20_wrapping_intervalivp PUBLIC tubex-solve)
